# MACKET

./: .editorconfig  .gitignore  README.md  lint.sh  pyproject.toml  read_write_test.py  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python.yml
assignment_template/: .editorconfig  README.md  directivestotest  init_project.sh
assignment_template/preprocessing/: extract_check_expects.rkt  extract_instructor_tests.bash  extract_private_defs.rkt  extract_private_defs_instructor.rkt  extract_private_defs_student.rkt  extract_requires.rkt  extract_solution_defs.rkt  extract_student_tests.bash  prepare_mutants.bash  prepare_student_impl.bash
assignment_template/template/: Makefile  extract_instructor_tests.bash  generate_mutants.bash  hwX-instructor-solution.rkt  hwX.rkt  mutation_commands.sh  provide-hack.rkt  public-symbols.rkt  reader-directive.txt  test-runner.rkt
racket_mutation_analysis/mutation_analysis/: main.py
racket_mutation_analysis/mutation_analysis/e2e/: hw-instructor-solution.rkt  hw-student-tests.rkt  mutants.yml  mutation_commands.sh  run_e2e_test.sh
racket_mutation_analysis/racket_ast/: buffer.py  scheme_reader.py  scheme_tokens.py  string_visitor.py  utils.py  visitor.py
racket_mutation_analysis/racket_mutation/: main.py  mutant_generator.py  schema.py
racket_mutation_analysis/racket_mutation/mutators/: __init__.py  arithmetic_deletion.py  arithmetic_mut.py  bool_func_to_bool.py  bool_params_to_bool.py  cond_mut.py  empty_list.py  empty_string.py  flip_bools.py  flip_num_sign.py  homework_mutator.py  if_mut.py  (+5 more)
(+33 files in other folders)
